force-app/main/default/objects/Signature_Request__c/fields/Confirmation_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Error__c</fullName>
    <description>Full error message and stack trace when Confirmation_Email_Status__c is Failed. Cleared before each new send attempt.</description>
    <label>Confirmation Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>