force-app/main/default/objects/Signature_Request__c/fields/Confirmation_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Status__c</fullName>
    <description>Tracks whether the signed-document confirmation email was successfully sent. Values: Pending (queueable enqueued), Sent (success), Failed (error).</description>
    <label>Confirmation Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>