force-app/main/default/objects/Signature_Request__c/fields/Decline_Description__c.field-meta.xml
<CustomField>
    <fullName>Decline_Description__c</fullName>
    <description>Additional details provided by the signer when declining to sign.</description>
    <label>Decline Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>