force-app/main/default/objects/Signature_Request__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Reason provided by the signer when declining to sign the document.</description>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not Interested</fullName><default>false</default><label>Not Interested</label></value>
            <value><fullName>Wrong Document</fullName><default>false</default><label>Wrong Document</label></value>
            <value><fullName>Technical Issue</fullName><default>false</default><label>Technical Issue</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>