force-app/main/default/objects/Signature_Request__c/fields/Last_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Last_Accessed__c</fullName>
    <description>Timestamp of the most recent page load by the signer. Updated on every valid token validation to support access-pattern auditing.</description>
    <label>Last Accessed</label>
    <type>DateTime</type>
</CustomField>