force-app/main/default/objects/Signature_Request__c/fields/Last_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent__c</fullName>
    <description>Timestamp of the most recently dispatched reminder email. Used to enforce a minimum interval between reminders.</description>
    <label>Last Reminder Sent</label>
    <type>DateTime</type>
</CustomField>