force-app/main/default/objects/Signature_Request__c/fields/Message_to_Signer__c.field-meta.xml
<CustomField>
    <fullName>Message_to_Signer__c</fullName>
    <description>Optional personalised message from the requester shown on the signing page and included in the email. Plain text only; HTML is not rendered.</description>
    <label>Message to Signer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>