force-app/main/default/objects/Signature_Request__c/fields/PDF_Generation_Error__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation_Error__c</fullName>
    <label>PDF Generation Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>