force-app/main/default/objects/Signature_Request__c/fields/PDF_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation_Status__c</fullName>
    <label>PDF Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Processing</fullName><default>false</default><label>Processing</label></value>
            <value><fullName>Complete</fullName><default>false</default><label>Complete</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>