force-app/main/default/objects/Signature_Request__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Generic polymorphic record Id. Can reference any SObject (Opportunity, Account, Case, etc.). Used to link the signed document back to the calling system's record.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>