force-app/main/default/objects/Signature_Request__c/fields/Requester_Id__c.field-meta.xml
<CustomField>
    <fullName>Requester_Id__c</fullName>
    <description>Salesforce User who initiated this signing request. Used for ownership, notifications, and admin traceability.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>Signature_Requests_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>