force-app/main/default/objects/Signature_Request__c/fields/Secure_Token__c.field-meta.xml
<CustomField>
    <fullName>Secure_Token__c</fullName>
    <description>Cryptographically secure token (256-bit AES entropy) used as the signing link key. Marked External ID for indexed lookups from the public VF page without exposing Salesforce record IDs.</description>
    <externalId>true</externalId>
    <label>Secure Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>