force-app/main/default/objects/Signature_Request__c/fields/Signature_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_Id__c</fullName>
    <description>ContentDocumentId of the captured signature image (PNG). Stored separately from the signed document to support independent retrieval and legal exhibit use.</description>
    <label>Signature Image Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>