force-app/main/default/objects/Signature_Request__c/fields/Signed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Signed_DateTime__c</fullName>
    <description>Server-side timestamp recorded at the moment the signer submits their signature. Used as the legal signing timestamp in the audit trail.</description>
    <label>Signed Date/Time</label>
    <type>DateTime</type>
</CustomField>