force-app/main/default/objects/Signature_Request__c/fields/Signer_User_Agent__c.field-meta.xml
<CustomField>
    <fullName>Signer_User_Agent__c</fullName>
    <description>Browser/device User-Agent string captured at signing time. Supports fraud investigation and legal audit.</description>
    <label>Signer User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>