force-app/main/default/objects/Signature_Request__c/fields/Signing_IP__c.field-meta.xml
<CustomField>
    <fullName>Signing_IP__c</fullName>
    <description>IP address of the signer captured via Salesforce X-Salesforce-SIP header at signing time. Required for legal audit trail.</description>
    <label>Signing IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>