force-app/main/default/objects/Signature_Request__c/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>DateTime after which the token is invalid. Checked server-side on every signing page load; never trusted from the client.</description>
    <label>Token Expiry</label>
    <type>DateTime</type>
</CustomField>